--- a/index.html
+++ b/index.html
@@ -600,9 +600,9 @@ Slides
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
-<a href=/website/talk/pere-castor-raconte-nous-une-histoire-dops/>Père Castor, raconte nous une histoire (d'OPS)</a>
+<a href=/website/talk/pere-castor-raconte-nous-une-histoire-dops-cloud-nord/>Père Castor, raconte nous une histoire d'OPS (Cloud Nord)</a>
 </div>
-<a href=/website/talk/pere-castor-raconte-nous-une-histoire-dops/ class=summary-link>
+<a href=/website/talk/pere-castor-raconte-nous-une-histoire-dops-cloud-nord/ class=summary-link>
 <div class=article-style>
 L&rsquo;analyse des erreurs des plus grands, pour apprendre
 </div>
@@ -627,8 +627,8 @@ Slides
 </div>
 </div>
 <div class=ml-3>
-<a href=/website/talk/pere-castor-raconte-nous-une-histoire-dops/>
-<img src=/website/talk/pere-castor-raconte-nous-une-histoire-dops/featured_hu32a5bac877dc9d95a9bc45833af2caf8_177406_150x0_resize_q75_lanczos.jpg alt="Père Castor, raconte nous une histoire (d'OPS)" loading=lazy>
+<a href=/website/talk/pere-castor-raconte-nous-une-histoire-dops-cloud-nord/>
+<img src=/website/talk/pere-castor-raconte-nous-une-histoire-dops-cloud-nord/featured_hu32a5bac877dc9d95a9bc45833af2caf8_177406_150x0_resize_q75_lanczos.jpg alt="Père Castor, raconte nous une histoire d'OPS (Cloud Nord)" loading=lazy>
 </a>
 </div>
 </div>
