--- a/talk/pere-castor-raconte-nous-une-histoire-dops/index.html
+++ b/talk/pere-castor-raconte-nous-une-histoire-dops/index.html
@@ -226,7 +226,7 @@ SnowCamp 2022
 <li><a href=/website/talk/interruption-as-a-sageness-devops-d-day/>Interruption as a Sageness (DEVOPS D-DAY)</a></li>
 <li><a href=/website/talk/les-briques-du-cloud-speciale-cloud-nord-s01e01/>Les Briques du Cloud - Spéciale Cloud Nord (S01E01)</a></li>
 <li><a href=/website/talk/iaas-interruption-as-a-sageness-meetup/>IaaS, Interruption as a Sageness (meetup)</a></li>
-<li><a href=/website/talk/pere-castor-raconte-nous-une-histoire-dops/>Père Castor, raconte nous une histoire (d'OPS)</a></li>
+<li><a href=/website/talk/pere-castor-raconte-nous-une-histoire-dops-cloud-nord/>Père Castor, raconte nous une histoire d'OPS (Cloud Nord)</a></li>
 <li><a href=/website/talk/iaas-interruption-as-a-sageness/>IaaS (Interruption as a Sageness)</a></li>
 </ul>
 </div>
