deploy: b98f0161e3baef5e1c22e79c41ddbf111deed09f

--- a/fr/talk/agilite-et-securite-numeriques/index.html
+++ b/fr/talk/agilite-et-securite-numeriques/index.html
@@ -200,8 +200,8 @@ Sophia Security Camp 2019
 <div class=article-style>
 <div class="alert alert-note">
 <div>
-<p>This conference at Sophia Security Camp 2019 was not given due to company change</p>
-<p>But I did it at <a href=https://humantalks.com/cities/lyon/events/533>HumanTalks (10 min)</a> and at <a href=https://www.meetup.com/GDG-Cloud-Lyon/events/lpnvdpybcdbrb/>GDG Lyon Meetup (1h)</a></p>
+<p>Cette conférence au Sophia Security Camp 2019 n&rsquo;a pas été donnée en raison d&rsquo;un changement d&rsquo;entreprise.</p>
+<p>Mais je l&rsquo;ai donné à <a href=https://humantalks.com/cities/lyon/events/533>HumanTalks (10 min)</a> ainsi qu&rsquo;au <a href=https://www.meetup.com/GDG-Cloud-Lyon/events/lpnvdpybcdbrb/>GDG Lyon Meetup (format 1h)</a></p>
 </div>
 </div>
 </div>
