deploy: 2c3ac0b5f3bcc8b2af0454f6e1a6af8ed3cf3d20

--- a/fr/talk/la-sauvegarde-de-kerberos/index.html
+++ b/fr/talk/la-sauvegarde-de-kerberos/index.html
@@ -203,7 +203,7 @@ GDG Cloud & Iot Lyon
 <div class=article-style>
 <div class="alert alert-note">
 <div>
-This conference was given as a small version <a href=https://humantalks.com/cities/lyon/events/533>HumanTalks (10 min)</a> (<a href=https://davidaparicio.gitlab.io/200211-humantalks/>slides</a>)
+Cette conférence a été donnée dans un format bien plus court à <a href=https://humantalks.com/cities/lyon/events/533>HumanTalks (10 min)</a> (<a href=https://davidaparicio.gitlab.io/200211-humantalks/>slides</a>)
 </div>
 </div>
 </div>
