deploy: 5809437f6ff6ffcce7f5722cbdc23dad5d4c1b8b

--- a/fr/talk/5-conseils-pour-soumettre-son-premier-cfp/index.html
+++ b/fr/talk/5-conseils-pour-soumettre-son-premier-cfp/index.html
@@ -203,7 +203,7 @@ Cloud Nord 2021 x WeLoveDevs
 <div class=article-style>
 <div class="alert alert-note">
 <div>
-Fun fact, It was my first podcast recording ;-)
+Petite anecdote/fait amusant, c&rsquo;était mon premier enregistrement de podcast ;-)
 </div>
 </div>
 </div>
