--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 <p>Passionate engineer in Computer Science, graduated INSA Lyon 2014, after two years spent at UNICAMP in Brazil, actively participates in the community, through Meetups and conferences.</p>
 <p>His motto: &ldquo;No developer is supposed to ignore security&rdquo;.</p>
 <p>
-<i class="fas fa-download pr-1 fa-fw"></i> Download my <a href=/website/files/DavidAparicio-CV.pdf target=_blank>resumé</a>.</p>
+<i class="fas fa-download pr-1 fa-fw"></i> Download my <a href=/website/files/DavidAparicio-CV.pdf target=_blank>resume</a>.</p>
 </div>
 <div class=row>
 <div class=col-md-5>
