deploy: f3e538a17a66a42648b154e879df0a65958933da

--- a/fr/talk/interruption-as-a-sageness-devops-d-day/index.html
+++ b/fr/talk/interruption-as-a-sageness-devops-d-day/index.html
@@ -144,6 +144,9 @@ David Aparicio</span>
 <a class="btn btn-outline-primary btn-page-header" href=/website/talks/DevOpsDDay2021_IaaS.pdf target=_blank rel=noopener>
 Slides
 </a>
+<a class="btn btn-outline-primary btn-page-header" href="https://www.youtube.com/watch?v=tll9gsDLuLM" target=_blank rel=noopener>
+Vidéo
+</a>
 <a class="btn btn-outline-primary btn-page-header" href=https://openfeedback.io/O0JgOh7607hrFK6xomd6/2021-11-18/SIE6sm17zZIewvX5vO9G target=_blank rel=noopener>
 <i class="fas fa-comments mr-1"></i>openfeedback.io</a>
 </div>
