--- a/talk/security-at-the-design-stage-cloud-est/index.html
+++ b/talk/security-at-the-design-stage-cloud-est/index.html
@@ -144,6 +144,9 @@ David Aparicio</span>
 <a class="btn btn-outline-primary btn-page-header" href=/website/talks/CloudEst2021_La_securite_des_la_conception.pdf target=_blank rel=noopener>
 Slides
 </a>
+<a class="btn btn-outline-primary btn-page-header" href="https://www.youtube.com/watch?v=P_lnXgy8mNU" target=_blank rel=noopener>
+Video
+</a>
 </div>
 </div>
 <div class="article-header article-container featured-image-wrapper mt-4 mb-4" style=max-width:720px;max-height:406px>
