deploy: b48aa7b63d73452e33659ef9de8212782636e5fc

--- a/index.html
+++ b/index.html
@@ -534,6 +534,11 @@ Following the latest AWS incidents? What can we learn?
 David Aparicio</span>
 </div>
 </div>
+<div class=btn-links>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=/website/talks/TNT2022_PereCastor.pdf target=_blank rel=noopener>
+Slides
+</a>
+</div>
 </div>
 <div class=ml-3>
 <a href=/website/talk/father-castor-tell-us-a-story-about-ops/>
