deploy: 7b08ca46c65e1ecadc9cb408826f871c2db17757

--- a/fr/404.html
+++ b/fr/404.html
@@ -125,7 +125,7 @@
 <ul>
 <li><a href=/website/fr/talk/pere-castor-raconte-nous-une-histoire-dops/>Père Castor 🐻, raconte nous une histoire (d'OPS)</a></li>
 <li><a href=/website/fr/event/>Conférences récentes et à venir</a></li>
-<li><a href=/website/fr/talk/pere-castor-raconte-nous-une-histoire-dops/>Père Castor 🐻, raconte nous une histoire d'OPS</a></li>
+<li><a href=/website/fr/talk/pere-castor-raconte-nous-une-histoire-ops/>Père Castor 🐻, raconte nous une histoire OPS</a></li>
 <li><a href=/website/fr/talk/interruption-as-a-sageness-devops-d-day/>Interruption as a Sageness (DEVOPS D-DAY)</a></li>
 <li><a href=/website/fr/talk/la-securite-des-la-conception-du-projet-cloud-est/>La Sécurité dès la conception du projet (Cloud Est)</a></li>
 <li><a href=/website/fr/talk/iaas-interruption-as-a-sageness-meetup/>IaaS, Interruption as a Sageness (meetup)</a></li>
