--- a/fr/index.html
+++ b/fr/index.html
@@ -501,6 +501,11 @@ Quels sont les derniers incidents ? Que pouvons-nous apprendre ?
 David Aparicio</span>
 </div>
 </div>
+<div class=btn-links>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=/website/talks/SnowCamp2022_PereCastor.pdf target=_blank rel=noopener>
+Slides
+</a>
+</div>
 </div>
 <div class=ml-3>
 <a href=/website/fr/talk/pere-castor-raconte-nous-une-histoire-dops/>
@@ -511,9 +516,9 @@ David Aparicio</span>
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
-<a href=/website/fr/talk/pere-castor-raconte-nous-une-histoire-dops/>Père Castor 🐻, raconte nous une histoire d'OPS</a>
+<a href=/website/fr/talk/pere-castor-raconte-nous-une-histoire-ops/>Père Castor 🐻, raconte nous une histoire OPS</a>
 </div>
-<a href=/website/fr/talk/pere-castor-raconte-nous-une-histoire-dops/ class=summary-link>
+<a href=/website/fr/talk/pere-castor-raconte-nous-une-histoire-ops/ class=summary-link>
 <div class=article-style>
 Suite aux derniers incidents AWS ? Que pouvons-nous apprendre ?
 </div>
@@ -538,8 +543,8 @@ Slides
 </div>
 </div>
 <div class=ml-3>
-<a href=/website/fr/talk/pere-castor-raconte-nous-une-histoire-dops/>
-<img src=/website/fr/talk/pere-castor-raconte-nous-une-histoire-dops/featured_hu0e4936d86f1d5286237a69ff439c23df_1478585_150x0_resize_q75_lanczos.jpg alt="Père Castor 🐻, raconte nous une histoire d'OPS" loading=lazy>
+<a href=/website/fr/talk/pere-castor-raconte-nous-une-histoire-ops/>
+<img src=/website/fr/talk/pere-castor-raconte-nous-une-histoire-ops/featured_hu0e4936d86f1d5286237a69ff439c23df_1478585_150x0_resize_q75_lanczos.jpg alt="Père Castor 🐻, raconte nous une histoire OPS" loading=lazy>
 </a>
 </div>
 </div>
