--- a/fr/talk/iaas-talk-only-no-slides/index.html
+++ b/fr/talk/iaas-talk-only-no-slides/index.html
@@ -241,7 +241,7 @@ Riviera DEV 2021
 <div class="article-widget content-widget-hr">
 <h3>Sur le même sujet</h3>
 <ul>
-<li><a href=/website/fr/talk/pere-castor-raconte-nous-une-histoire-dops/>Père Castor 🐻, raconte nous une histoire d'OPS</a></li>
+<li><a href=/website/fr/talk/pere-castor-raconte-nous-une-histoire-ops/>Père Castor 🐻, raconte nous une histoire OPS</a></li>
 <li><a href=/website/fr/talk/pere-castor-raconte-nous-une-histoire-dops/>Père Castor 🐻, raconte nous une histoire (d'OPS)</a></li>
 <li><a href=/website/fr/talk/interruption-as-a-sageness-devops-d-day/>Interruption as a Sageness (DEVOPS D-DAY)</a></li>
 <li><a href=/website/fr/talk/iaas-interruption-as-a-sageness-meetup/>IaaS, Interruption as a Sageness (meetup)</a></li>
