--- a/fr/talk/interruption-as-a-sageness-devops-d-day/index.html
+++ b/fr/talk/interruption-as-a-sageness-devops-d-day/index.html
@@ -246,7 +246,7 @@ DEVOPS D-DAY, 6 edition
 <div class="article-widget content-widget-hr">
 <h3>Sur le même sujet</h3>
 <ul>
-<li><a href=/website/fr/talk/pere-castor-raconte-nous-une-histoire-dops/>Père Castor 🐻, raconte nous une histoire d'OPS</a></li>
+<li><a href=/website/fr/talk/pere-castor-raconte-nous-une-histoire-ops/>Père Castor 🐻, raconte nous une histoire OPS</a></li>
 <li><a href=/website/fr/talk/pere-castor-raconte-nous-une-histoire-dops/>Père Castor 🐻, raconte nous une histoire (d'OPS)</a></li>
 <li><a href=/website/fr/talk/les-briques-du-cloud-speciale-cloud-nord-s01e01/>Les Briques du Cloud - Spéciale Cloud Nord (S01E01)</a></li>
 <li><a href=/website/fr/talk/iaas-interruption-as-a-sageness-meetup/>IaaS, Interruption as a Sageness (meetup)</a></li>
