--- a/talk/father-castor-tell-us-a-story-from-ops/index.html
+++ b/talk/father-castor-tell-us-a-story-from-ops/index.html
@@ -140,6 +140,11 @@
 David Aparicio</span>
 </div>
 </div>
+<div class="btn-links mb-3">
+<a class="btn btn-outline-primary btn-page-header" href=/website/talks/SnowCamp2022_PereCastor.pdf target=_blank rel=noopener>
+Slides
+</a>
+</div>
 </div>
 <div class="article-header article-container featured-image-wrapper mt-4 mb-4" style=max-width:720px;max-height:410px>
 <div style=position:relative>
