deploy: f0997a8362204fe525a4f0ebfd00aee483b87e70

--- a/fr/404.html
+++ b/fr/404.html
@@ -123,16 +123,16 @@
 <p>Vous cherchiez peut-être une des pages suivantes ?</p>
 <h2>Récents</h2>
 <ul>
-<li><a href=/website/fr/talk/pere-castor-raconte-nous-une-histoire-dops/>Père Castor 🐻, raconte nous une histoire (d'OPS)</a></li>
+<li><a href=/website/fr/talk/pere-castor-raconte-nous-des-histoire-dops/>Père Castor 🐻, raconte nous des histoire (d'OPS)</a></li>
 <li><a href=/website/fr/event/>Conférences récentes et à venir</a></li>
+<li><a href=/website/fr/talk/reprenez-le-controle-de-votre-bash-en-devenant-un-ninja-de-la-cli/>Reprenez le contrôle de votre bash en devenant un ninja de la CLI ! 😎</a></li>
+<li><a href=/website/fr/talk/vis-ma-vie-dops/>Vis ma vie d'Ops</a></li>
+<li><a href=/website/fr/talk/pere-castor-raconte-nous-une-histoire-dops/>Père Castor 🐻, raconte nous une histoire (d'OPS)</a></li>
 <li><a href=/website/fr/talk/pere-castor-raconte-nous-une-histoire-ops/>Père Castor 🐻, raconte nous une histoire OPS</a></li>
 <li><a href=/website/fr/talk/interruption-as-a-sageness-devops-d-day/>Interruption as a Sageness (DEVOPS D-DAY)</a></li>
 <li><a href=/website/fr/talk/la-securite-des-la-conception-du-projet-cloud-est/>La Sécurité dès la conception du projet (Cloud Est)</a></li>
 <li><a href=/website/fr/talk/iaas-interruption-as-a-sageness-meetup/>IaaS, Interruption as a Sageness (meetup)</a></li>
 <li><a href=/website/fr/talk/pere-castor-raconte-nous-une-histoire-dops-cloud-nord/>Père Castor, raconte nous une histoire d'OPS (Cloud Nord)</a></li>
-<li><a href=/website/fr/talk/les-briques-du-cloud-speciale-cloud-nord-s01e01/>Les Briques du Cloud - Spéciale Cloud Nord (S01E01)</a></li>
-<li><a href=/website/fr/talk/iaas-interruption-as-a-sageness/>IaaS (Interruption as a Sageness)</a></li>
-<li><a href=/website/fr/talk/5-conseils-pour-soumettre-son-premier-cfp/>5 Conseils pour soumettre son premier CFP</a></li>
 </ul>
 </div>
 </div>
