--- a/fr/talk/les-briques-du-cloud-speciale-cloud-nord-s01e01/index.html
+++ b/fr/talk/les-briques-du-cloud-speciale-cloud-nord-s01e01/index.html
@@ -248,6 +248,8 @@ Cloud Nord 2021
 <div class="article-widget content-widget-hr">
 <h3>Sur le même sujet</h3>
 <ul>
+<li><a href=/website/fr/talk/pere-castor-raconte-nous-des-histoire-dops/>Père Castor 🐻, raconte nous des histoire (d'OPS)</a></li>
+<li><a href=/website/fr/talk/vis-ma-vie-dops/>Vis ma vie d'Ops</a></li>
 <li><a href=/website/fr/talk/pere-castor-raconte-nous-une-histoire-ops/>Père Castor 🐻, raconte nous une histoire OPS</a></li>
 <li><a href=/website/fr/talk/pere-castor-raconte-nous-une-histoire-dops/>Père Castor 🐻, raconte nous une histoire (d'OPS)</a></li>
 <li><a href=/website/fr/talk/interruption-as-a-sageness-devops-d-day/>Interruption as a Sageness (DEVOPS D-DAY)</a></li>
