--- a/fr/talk/pere-castor-raconte-nous-une-histoire-ops/index.html
+++ b/fr/talk/pere-castor-raconte-nous-une-histoire-ops/index.html
@@ -241,11 +241,11 @@ Touraine Tech 22
 <div class="article-widget content-widget-hr">
 <h3>Sur le même sujet</h3>
 <ul>
+<li><a href=/website/fr/talk/pere-castor-raconte-nous-des-histoire-dops/>Père Castor 🐻, raconte nous des histoire (d'OPS)</a></li>
+<li><a href=/website/fr/talk/vis-ma-vie-dops/>Vis ma vie d'Ops</a></li>
 <li><a href=/website/fr/talk/pere-castor-raconte-nous-une-histoire-dops/>Père Castor 🐻, raconte nous une histoire (d'OPS)</a></li>
 <li><a href=/website/fr/talk/interruption-as-a-sageness-devops-d-day/>Interruption as a Sageness (DEVOPS D-DAY)</a></li>
-<li><a href=/website/fr/talk/les-briques-du-cloud-speciale-cloud-nord-s01e01/>Les Briques du Cloud - Spéciale Cloud Nord (S01E01)</a></li>
-<li><a href=/website/fr/talk/iaas-interruption-as-a-sageness-meetup/>IaaS, Interruption as a Sageness (meetup)</a></li>
-<li><a href=/website/fr/talk/pere-castor-raconte-nous-une-histoire-dops-cloud-nord/>Père Castor, raconte nous une histoire d'OPS (Cloud Nord)</a></li>
+<li><a href=/website/fr/talk/reprenez-le-controle-de-votre-bash-en-devenant-un-ninja-de-la-cli/>Reprenez le contrôle de votre bash en devenant un ninja de la CLI ! 😎</a></li>
 </ul>
 </div>
 </div>
