--- a/talk/cloud-lego-special-cloud-nord-s01e01/index.html
+++ b/talk/cloud-lego-special-cloud-nord-s01e01/index.html
@@ -248,6 +248,8 @@ Cloud Nord 2021
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/website/talk/live-my-life-as-an-ops/>Live my life as an Ops</a></li>
+<li><a href=/website/talk/pere-castor-raconte-nous-des-histoire-dops/>Père Castor 🐻, raconte nous des histoire (d'OPS)</a></li>
 <li><a href=/website/talk/father-castor-tell-us-a-story-about-ops/>Father Castor 🐻, tell us a story about OPS</a></li>
 <li><a href=/website/talk/father-castor-tell-us-a-story-from-ops/>Father Castor 🐻, tell us a story (from OPS)</a></li>
 <li><a href=/website/talk/interruption-as-a-sageness-devops-d-day/>Interruption as a Sageness (DEVOPS D-DAY)</a></li>
