deploy: 24f9ecd557838490c610d0275de467fbfb7639e4

--- a/fr/talk/la-securite-des-la-conception-du-projet-quickie/index.html
+++ b/fr/talk/la-securite-des-la-conception-du-projet-quickie/index.html
@@ -207,6 +207,7 @@ JUG SummerCamp 2020
 </div>
 <div class=article-tags>
 <a class="badge badge-light" href=/website/fr/tag/cybersecurite/>Cybersécurité</a>
+<a class="badge badge-light" href=/website/fr/tag/quickie/>Quickie</a>
 </div>
 <div class=share-box aria-hidden=true>
 <ul class=share>
@@ -245,11 +246,11 @@ JUG SummerCamp 2020
 <div class="article-widget content-widget-hr">
 <h3>Sur le même sujet</h3>
 <ul>
+<li><a href=/website/fr/talk/reprenez-le-controle-de-votre-bash-en-devenant-un-ninja-de-la-cli/>Reprenez le contrôle de votre bash en devenant un ninja de la CLI ! 😎</a></li>
 <li><a href=/website/fr/talk/la-securite-des-la-conception-du-projet-cloud-est/>La Sécurité dès la conception du projet (Cloud Est)</a></li>
 <li><a href=/website/fr/talk/la-securite-des-la-conception-du-projet/>La Sécurité dès la conception du projet</a></li>
 <li><a href=/website/fr/talk/la-sauvegarde-de-kerberos/>La Sauvegarde de Kerberos</a></li>
 <li><a href=/website/fr/talk/security-by-design/>Security By Design</a></li>
-<li><a href=/website/fr/talk/agilite-et-securite-numeriques/>Agilité et sécurité numériques</a></li>
 </ul>
 </div>
 </div>
