--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@ David Aparicio</span>
 </div>
 </div>
 <div class=btn-links>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://app.livestorm.co/malt-community/vis-ma-vie-dops?type=detailed" target=_blank rel=noopener>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://cfp.devoxx.fr/2022/talk/BJV-2519 target=_blank rel=noopener>
 <i class="fas fa-binoculars mr-1"></i>Description</a>
 </div>
 </div>
@@ -727,7 +727,7 @@ Cite
 <a href=/website/tag/conference/ style=font-size:.7rem>Conference</a>
 <a href=/website/tag/deep-learning/ style=font-size:.7rem>Deep Learning</a>
 <a href=/website/tag/podcast/ style=font-size:.7rem>Podcast</a>
-<a href=/website/tag/quickie/ style=font-size:.7rem>Quickie</a>
+<a href=/website/tag/quickie/ style=font-size:1.0757842742132542rem>Quickie</a>
 <a href=/website/tag/security/ style=font-size:1.7549598318444235rem>Security</a>
 <a href=/website/tag/sre/ style=font-size:1.9483283381258658rem>SRE</a>
 <a href=/website/tag/tia/ style=font-size:.7rem>TIA</a>
