--- a/talk/security-at-the-design-stage-quickie/index.html
+++ b/talk/security-at-the-design-stage-quickie/index.html
@@ -207,6 +207,7 @@ JUG SummerCamp 2020
 </div>
 <div class=article-tags>
 <a class="badge badge-light" href=/website/tag/security/>Security</a>
+<a class="badge badge-light" href=/website/tag/quickie/>Quickie</a>
 </div>
 <div class=share-box aria-hidden=true>
 <ul class=share>
@@ -245,11 +246,11 @@ JUG SummerCamp 2020
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/website/talk/take-back-control-of-your-bash-by-becoming-a-cli-ninja/>Take back control of your Bash by becoming a CLI ninja! 😎</a></li>
 <li><a href=/website/talk/security-at-the-design-stage-cloud-est/>Security at the design stage (Cloud Est)</a></li>
 <li><a href=/website/talk/security-at-the-project-design-stage/>Security at the project design stage</a></li>
 <li><a href=/website/talk/kerberos-backup/>Kerberos backup</a></li>
 <li><a href=/website/talk/security-by-design/>Security By Design</a></li>
-<li><a href=/website/talk/agility-and-security-case-study-with-kerberos-automated-backup/>Agility and Security, Case study with Kerberos automated backup</a></li>
 </ul>
 </div>
 </div>
