--- a/fr/index.html
+++ b/fr/index.html
@@ -502,7 +502,7 @@ David Aparicio</span>
 </div>
 </div>
 <div class=btn-links>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://app.livestorm.co/malt-community/vis-ma-vie-dops?type=detailed" target=_blank rel=noopener>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://cfp.devoxx.fr/2022/talk/BJV-2519 target=_blank rel=noopener>
 <i class="fas fa-binoculars mr-1"></i>Description</a>
 </div>
 </div>
@@ -712,7 +712,7 @@ Citation
 <a href=/website/fr/tag/cybersecurite/ style=font-size:1.6713882572019783rem>Cybersécurité</a>
 <a href=/website/fr/tag/deep-learning/ style=font-size:.7rem>Deep Learning</a>
 <a href=/website/fr/tag/podcast/ style=font-size:.7rem>Podcast</a>
-<a href=/website/fr/tag/quickie/ style=font-size:.7rem>Quickie</a>
+<a href=/website/fr/tag/quickie/ style=font-size:1.0757842742132542rem>Quickie</a>
 <a href=/website/fr/tag/sre/ style=font-size:1.9483283381258658rem>SRE</a>
 <a href=/website/fr/tag/securite/ style=font-size:.7rem>Sécurité</a>
 <a href=/website/fr/tag/tia/ style=font-size:.7rem>TIA</a>
