--- a/talk/pere-castor-raconte-nous-des-histoire-dops/index.html
+++ b/talk/pere-castor-raconte-nous-des-histoire-dops/index.html
@@ -141,7 +141,7 @@ David Aparicio</span>
 </div>
 </div>
 <div class="btn-links mb-3">
-<a class="btn btn-outline-primary btn-page-header" href="https://app.livestorm.co/malt-community/vis-ma-vie-dops?type=detailed" target=_blank rel=noopener>
+<a class="btn btn-outline-primary btn-page-header" href=https://cfp.devoxx.fr/2022/talk/BJV-2519 target=_blank rel=noopener>
 <i class="fas fa-binoculars mr-1"></i>Description</a>
 </div>
 </div>
