deploy: a44b9ffe96fbc25546a32823aafff08b15b8b6ef

--- a/event/index.html
+++ b/event/index.html
@@ -144,9 +144,9 @@
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
-<a href=/website/talk/pere-castor-raconte-nous-des-histoire-dops/>Père Castor 🐻, raconte nous des histoire (d'OPS)</a>
+<a href=/website/talk/father-castor-tell-us-some-ops-stories/>Father Castor 🐻, tell us some OPS stories</a>
 </div>
-<a href=/website/talk/pere-castor-raconte-nous-des-histoire-dops/ class=summary-link>
+<a href=/website/talk/father-castor-tell-us-some-ops-stories/ class=summary-link>
 <div class=article-style>
 Following the latest IT incidents? What can we learn?
 </div>
@@ -170,8 +170,8 @@ David Aparicio</span>
 </div>
 </div>
 <div class=ml-3>
-<a href=/website/talk/pere-castor-raconte-nous-des-histoire-dops/>
-<img src=/website/talk/pere-castor-raconte-nous-des-histoire-dops/featured_hu436e33b4aa7a21157c3b59f6f4a27661_3083598_150x0_resize_q75_lanczos.jpg alt="Père Castor 🐻, raconte nous des histoire (d'OPS)" loading=lazy>
+<a href=/website/talk/father-castor-tell-us-some-ops-stories/>
+<img src=/website/talk/father-castor-tell-us-some-ops-stories/featured_hu436e33b4aa7a21157c3b59f6f4a27661_3083598_150x0_resize_q75_lanczos.jpg alt="Father Castor 🐻, tell us some OPS stories" loading=lazy>
 </a>
 </div>
 </div>
