--- a/404.html
+++ b/404.html
@@ -124,7 +124,7 @@
 <h2>Latest</h2>
 <ul>
 <li><a href=/website/event/>Recent & Upcoming Talks</a></li>
-<li><a href=/website/talk/pere-castor-raconte-nous-des-histoire-dops/>Père Castor 🐻, raconte nous des histoire (d'OPS)</a></li>
+<li><a href=/website/talk/father-castor-tell-us-some-ops-stories/>Father Castor 🐻, tell us some OPS stories</a></li>
 <li><a href=/website/talk/take-back-control-of-your-bash-by-becoming-a-cli-ninja/>Take back control of your Bash by becoming a CLI ninja! 😎</a></li>
 <li><a href=/website/talk/live-my-life-as-an-ops/>Live my life as an Ops</a></li>
 <li><a href=/website/talk/father-castor-tell-us-a-story-from-ops/>Father Castor 🐻, tell us a story (from OPS)</a></li>
