--- a/talk/father-castor-tell-us-a-story-from-ops/index.html
+++ b/talk/father-castor-tell-us-a-story-from-ops/index.html
@@ -241,8 +241,8 @@ SnowCamp 2022
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/website/talk/father-castor-tell-us-some-ops-stories/>Father Castor 🐻, tell us some OPS stories</a></li>
 <li><a href=/website/talk/live-my-life-as-an-ops/>Live my life as an Ops</a></li>
-<li><a href=/website/talk/pere-castor-raconte-nous-des-histoire-dops/>Père Castor 🐻, raconte nous des histoire (d'OPS)</a></li>
 <li><a href=/website/talk/father-castor-tell-us-a-story-about-ops/>Father Castor 🐻, tell us a story about OPS</a></li>
 <li><a href=/website/talk/interruption-as-a-sageness-devops-d-day/>Interruption as a Sageness (DEVOPS D-DAY)</a></li>
 <li><a href=/website/talk/take-back-control-of-your-bash-by-becoming-a-cli-ninja/>Take back control of your Bash by becoming a CLI ninja! 😎</a></li>
