--- a/talk/live-my-life-as-an-ops/index.html
+++ b/talk/live-my-life-as-an-ops/index.html
@@ -237,7 +237,7 @@ Malt Academy
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
-<li><a href=/website/talk/pere-castor-raconte-nous-des-histoire-dops/>Père Castor 🐻, raconte nous des histoire (d'OPS)</a></li>
+<li><a href=/website/talk/father-castor-tell-us-some-ops-stories/>Father Castor 🐻, tell us some OPS stories</a></li>
 <li><a href=/website/talk/father-castor-tell-us-a-story-about-ops/>Father Castor 🐻, tell us a story about OPS</a></li>
 <li><a href=/website/talk/father-castor-tell-us-a-story-from-ops/>Father Castor 🐻, tell us a story (from OPS)</a></li>
 <li><a href=/website/talk/interruption-as-a-sageness-devops-d-day/>Interruption as a Sageness (DEVOPS D-DAY)</a></li>
