deploy: 39c29cc1fe254e85f8955fe7fe1df73fa4dfd6d0

--- a/talk/father-castor-tell-us-a-story-about-ops/index.html
+++ b/talk/father-castor-tell-us-a-story-about-ops/index.html
@@ -144,6 +144,9 @@ David Aparicio</span>
 <a class="btn btn-outline-primary btn-page-header" href=/website/talks/TNT2022_PereCastor.pdf target=_blank rel=noopener>
 Slides
 </a>
+<a class="btn btn-outline-primary btn-page-header" href=https://youtu.be/pjv1Jic7VLM target=_blank rel=noopener>
+Video
+</a>
 </div>
 </div>
 <div class="article-header article-container featured-image-wrapper mt-4 mb-4" style=max-width:720px;max-height:404px>
