--- a/index.html
+++ b/index.html
@@ -645,6 +645,9 @@ David Aparicio</span>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=/website/talks/TNT2022_PereCastor.pdf target=_blank rel=noopener>
 Slides
 </a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://youtu.be/pjv1Jic7VLM target=_blank rel=noopener>
+Video
+</a>
 </div>
 </div>
 <div class=ml-3>
