deploy: 2b0e687128aa59b684c62fbeffc1b478a4db6ec9

--- a/fr/index.html
+++ b/fr/index.html
@@ -217,6 +217,9 @@ Apr 2017
 <div class="section-heading col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-center align-items-lg-start">
 <h1 class=mb-0>Réalisations</h1></div><div class="col-12 col-lg-8">
 <div class="card experience course">
+<div class=card-body><a href=https://app.livestorm.co/solo-io/get-started-with-istio-workshop-with-certification-option-us-030222 target=_blank rel=noopener><div class="section-subheading card-title exp-title text-muted my-0">Istio Fondamentaux</div></a><div class="card-subtitle my-0 article-metadata"><a href=https://www.solo.io/ target=_blank rel=noopener>Solo.io</a><span class=middot-divider></span>
+Mar 2022
+</div><div class=card-text>Certifie que vous possédez les compétences de base pour l&rsquo;installer, sécuriser les services, ajouter des services au Mesh, sécuriser la communication interservices, contrôler le trafic et en assurer la résilience avec les tests de Chaos Monkey (2h30)</div></div></div><div class="card experience course">
 <div class=card-body><a href=https://training.zenika.com/fr-fr/training/gcp-core-infra/description target=_blank rel=noopener><div class="section-subheading card-title exp-title text-muted my-0">Formation Google Cloud Fundamentals Core Infrastructure</div></a><div class="card-subtitle my-0 article-metadata"><a href=https://zenika.com target=_blank rel=noopener>Zenika</a><span class=middot-divider></span>
 May 2021
 </div><div class=card-text>Introduction des concepts, la terminologie pour travailler avec Google Cloud Platform (GCP) et compare plusieurs des services de calcul/stockage disponibles : App/Compute/Container Engine (1 jour)</div></div></div><div class="card experience course">
