--- a/index.html
+++ b/index.html
@@ -218,6 +218,9 @@ Apr 2017
 <div class="section-heading col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-center align-items-lg-start">
 <h1 class=mb-0>Accomplish­ments</h1></div><div class="col-12 col-lg-8">
 <div class="card experience course">
+<div class=card-body><a href=https://app.livestorm.co/solo-io/get-started-with-istio-workshop-with-certification-option-us-030222 target=_blank rel=noopener><div class="section-subheading card-title exp-title text-muted my-0">Foundation for Istio</div></a><div class="card-subtitle my-0 article-metadata"><a href=https://www.solo.io/ target=_blank rel=noopener>Solo.io</a><span class=middot-divider></span>
+Mar 2022
+</div><div class=card-text>Certifies that you possess the introductory skills, to install, secure services, add services to the Mesh, secure interservices communication, control traffic, resiliency and Chaos Testing (2h30)</div></div></div><div class="card experience course">
 <div class=card-body><a href=https://training.zenika.com/fr-fr/training/gcp-core-infra/description target=_blank rel=noopener><div class="section-subheading card-title exp-title text-muted my-0">Google Cloud Fundamentals Core Infrastructure training</div></a><div class="card-subtitle my-0 article-metadata"><a href=https://zenika.com target=_blank rel=noopener>Zenika</a><span class=middot-divider></span>
 May 2021
 </div><div class=card-text>Introduces you to important concepts, terminology for working with Google Cloud Platform (GCP) and compare many of the computing/storage services available: App/Compute/Container Engine (1 day)</div></div></div><div class="card experience course">
