deploy: 322935aab43d7957a7643886e5d8e77f07adccdd

--- a/fr/index.html
+++ b/fr/index.html
@@ -52,16 +52,16 @@ Dans <em>PiBic</em>.<p><a class="btn btn-outline-primary btn-page-header btn-sm"
 <a href=/website/fr/tag/cloud/ style=font-size:1.7081810311000742rem>Cloud</a>
 <a href=/website/fr/tag/clubhouse/ style=font-size:.7rem>Clubhouse</a>
 <a href=/website/fr/tag/conference/ style=font-size:.7rem>Conférence</a>
-<a href=/website/fr/tag/cybersecurite/ style=font-size:1.800257367196711rem>Cybersécurité</a>
+<a href=/website/fr/tag/cybersecurite/ style=font-size:1.8401819250574247rem>Cybersécurité</a>
 <a href=/website/fr/tag/devoxxfr/ style=font-size:1.204090515550037rem>DevoxxFR</a>
-<a href=/website/fr/tag/devsecops/ style=font-size:.7rem>DevSecOps</a>
+<a href=/website/fr/tag/devsecops/ style=font-size:1.0180457047536937rem>DevSecOps</a>
 <a href=/website/fr/tag/hacker-news/ style=font-size:.7rem>Hacker News</a>
 <a href=/website/fr/tag/homonyme/ style=font-size:.7rem>Homonyme</a>
 <a href=/website/fr/tag/live/ style=font-size:.7rem>Live</a>
 <a href=/website/fr/tag/meetup/ style=font-size:1.0180457047536937rem>Meetup</a>
 <a href=/website/fr/tag/podcast/ style=font-size:.7rem>Podcast</a>
 <a href=/website/fr/tag/quickie/ style=font-size:1.7565249620795467rem>Quickie</a>
-<a href=/website/fr/tag/securite/ style=font-size:1.204090515550037rem>Sécurité</a>
+<a href=/website/fr/tag/securite/ style=font-size:1.3360914095073877rem>Sécurité</a>
 <a href=/website/fr/tag/sre/ style=font-size:1.9721828190147752rem>SRE</a>
 <a href=/website/fr/tag/tia/ style=font-size:.7rem>TIA</a>
 <a href=/website/fr/tag/twitch/ style=font-size:1.204090515550037rem>Twitch</a>
