--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@ Oct 2017</div><div class=card-text>Certifies technical knowledge, skill, and abi
 <span>Sophia-Antopolis (Université Côte d’Azur)</span></div><div><span>David Aparicio</span></div></div><div class=btn-links><a class="btn btn-outline-primary btn-page-header btn-sm" href=/website/talks/SophiaConf2022_PereCastor.pdf target=_blank rel=noopener>Slides</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://youtu.be/p_PDZvbD54o target=_blank rel=noopener>Video</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://s.42l.fr/sc22castor target=_blank rel=noopener><i class="fas fa-comments mr-1"></i>Feedback</a></div></div><div class=ml-3><a href=/website/talk/father-castor-tell-me-some-ops-stories/><img src=/website/talk/father-castor-tell-me-some-ops-stories/featured_hu00760b4da3018e340b807d4129fbd854_368272_150x0_resize_q75_lanczos.jpg alt="Father Castor 🐻, tell me some OPS stories" loading=lazy></a></div></div><div class=see-all><a href=/website/event/>See all events
-<i class="fas fa-angle-right"></i></a></div></div></div></div></section><section id=featured class="home-section wg-featured"><div class=home-section-bg></div><div class=container><div class=row><div class="section-heading col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-center align-items-lg-start"><h1 class=mb-0>Featured Publications</h1></div><div class="col-12 col-lg-8"></div></div></div></section><section id=publications class="home-section wg-pages"><div class=home-section-bg></div><div class=container><div class=row><div class="section-heading col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-center align-items-lg-start"><h1 class=mb-0>Recent Publications</h1></div><div class="col-12 col-lg-8"><div class="alert alert-note"><div>Quickly discover relevant content by <a href=./publication/>filtering publications</a>.</div></div><div class=pub-list-item style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<i class="fas fa-angle-right"></i></a></div></div></div></div></section><section id=featured class="home-section wg-featured"><div class=home-section-bg></div><div class=container><div class=row><div class="section-heading col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-center align-items-lg-start"><h1 class=mb-0>Featured Publications</h1></div><div class="col-12 col-lg-8"><div class=card-simple><div class=article-metadata><div><span>David Aparicio</span></div><span class=article-date>September 2022</span>
+<span class=middot-divider></span>
+<span class=pub-publication>In <em>Programmez! HS8</em></span></div><a href=/website/publication/programmez_hs8/><div class=img-hover-zoom><img src=/website/publication/programmez_hs8/featured_hu6891cfbc12b18ca97e18863d9a602e53_488380_808x455_fill_q75_lanczos_smart1.jpg class=article-banner alt="Secure by design" loading=lazy></div></a><div class="section-subheading article-title mb-1 mt-3"><a href=/website/publication/programmez_hs8/>Secure by design</a></div><a href=/website/publication/programmez_hs8/ class=summary-link><div class=article-style><p>This article presents a set of tools to secure your applications, following the Security by Design/DevSecOps methodologies.</p></div></a><div class=btn-links><a class="btn btn-outline-primary btn-page-header btn-sm" href=https://programmez.com/magazine/article/la-securite-des-la-conception-secure-design target=_blank rel=noopener>PDF</a>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/website/publication/programmez_hs8/cite.bib>Cite</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=/website/project/namecheck/>Project</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://twitter.com/francoistonic/status/1568152549043093506 target=_blank rel=noopener><i class="fab fa-twitter mr-1"></i>Twitter</a></div></div></div></div></div></section><section id=publications class="home-section wg-pages"><div class=home-section-bg></div><div class=container><div class=row><div class="section-heading col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-center align-items-lg-start"><h1 class=mb-0>Recent Publications</h1></div><div class="col-12 col-lg-8"><div class="alert alert-note"><div>Quickly discover relevant content by <a href=./publication/>filtering publications</a>.</div></div><div class=pub-list-item style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span>David Aparicio</span>, <span>Luiz E. Buzato</span></span>
 (2014).
 <a href=/website/publication/transactional_memories/>A Study of Factors External to Software Transactional Memories that Affect their Speed-up</a>.
@@ -45,16 +50,16 @@ In <em>PiBic</em>.<p><a class="btn btn-outline-primary btn-page-header btn-sm" h
 <a href=/website/tag/cloud/ style=font-size:1.7081810311000742rem>Cloud</a>
 <a href=/website/tag/clubhouse/ style=font-size:.7rem>Clubhouse</a>
 <a href=/website/tag/conference/ style=font-size:.7rem>Conference</a>
-<a href=/website/tag/cybersecurity/ style=font-size:.7rem>Cybersecurity</a>
+<a href=/website/tag/cybersecurity/ style=font-size:1.0180457047536937rem>Cybersecurity</a>
 <a href=/website/tag/devoxxfr/ style=font-size:1.204090515550037rem>DevoxxFR</a>
-<a href=/website/tag/devsecops/ style=font-size:.7rem>DevSecOps</a>
+<a href=/website/tag/devsecops/ style=font-size:1.0180457047536937rem>DevSecOps</a>
 <a href=/website/tag/hacker-news/ style=font-size:.7rem>Hacker News</a>
 <a href=/website/tag/live/ style=font-size:.7rem>Live</a>
 <a href=/website/tag/meetup/ style=font-size:1.0180457047536937rem>Meetup</a>
 <a href=/website/tag/namesake/ style=font-size:.7rem>Namesake</a>
 <a href=/website/tag/podcast/ style=font-size:.7rem>Podcast</a>
 <a href=/website/tag/quickie/ style=font-size:1.7565249620795467rem>Quickie</a>
-<a href=/website/tag/security/ style=font-size:1.800257367196711rem>Security</a>
+<a href=/website/tag/security/ style=font-size:1.8401819250574247rem>Security</a>
 <a href=/website/tag/sre/ style=font-size:1.9721828190147752rem>SRE</a>
 <a href=/website/tag/tia/ style=font-size:1.204090515550037rem>TIA</a>
 <a href=/website/tag/twitch/ style=font-size:1.204090515550037rem>Twitch</a>
