deploy: 2162e4853b229beb9682e662a8f2f70cf791f20f

--- a/fr/index.html
+++ b/fr/index.html
@@ -57,15 +57,15 @@ Dans <em>PiBic</em>.<p><a class="btn btn-outline-primary btn-page-header btn-sm"
 <a href=/website/fr/tag/clubhouse/ style=font-size:.7rem>Clubhouse</a>
 <a href=/website/fr/tag/conference/ style=font-size:.7rem>Conférence</a>
 <a href=/website/fr/tag/cybersecurite/ style=font-size:1.7971117647813875rem>Cybersécurité</a>
+<a href=/website/fr/tag/dataops/ style=font-size:.7rem>DataOps</a>
 <a href=/website/fr/tag/devoxxfr/ style=font-size:1.185048590028128rem>DevoxxFR</a>
 <a href=/website/fr/tag/devsecops/ style=font-size:1.0060315873766297rem>DevSecOps</a>
+<a href=/website/fr/tag/entretien/ style=font-size:.7rem>Entretien</a>
 <a href=/website/fr/tag/hacker-news/ style=font-size:.7rem>Hacker News</a>
 <a href=/website/fr/tag/homonyme/ style=font-size:.7rem>Homonyme</a>
 <a href=/website/fr/tag/interne/ style=font-size:.7rem>Interne</a>
 <a href=/website/fr/tag/live/ style=font-size:.7rem>Live</a>
-<a href=/website/fr/tag/lunch-learn/ style=font-size:.7rem>Lunch & Learn</a>
 <a href=/website/fr/tag/meetup/ style=font-size:1.185048590028128rem>Meetup</a>
-<a href=/website/fr/tag/podcast/ style=font-size:.7rem>Podcast</a>
 <a href=/website/fr/tag/quickie/ style=font-size:1.716614928029403rem>Quickie</a>
 <a href=/website/fr/tag/securite/ style=font-size:1.3120631747532594rem>Sécurité</a>
 <a href=/website/fr/tag/sre/ style=font-size:1.9761287674328858rem>SRE</a>
