--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@ In <em>PiBic</em>.<p><a class="btn btn-outline-primary btn-page-header btn-sm" h
 <a href=/website/tag/clubhouse/ style=font-size:.7rem>Clubhouse</a>
 <a href=/website/tag/conference/ style=font-size:.7rem>Conference</a>
 <a href=/website/tag/cybersecurity/ style=font-size:1.0060315873766297rem>Cybersecurity</a>
+<a href=/website/tag/dataops/ style=font-size:.7rem>DataOps</a>
 <a href=/website/tag/devoxxfr/ style=font-size:1.185048590028128rem>DevoxxFR</a>
 <a href=/website/tag/devsecops/ style=font-size:1.0060315873766297rem>DevSecOps</a>
 <a href=/website/tag/hacker-news/ style=font-size:.7rem>Hacker News</a>
 <a href=/website/tag/internal/ style=font-size:.7rem>Internal</a>
+<a href=/website/tag/interview/ style=font-size:.7rem>Interview</a>
 <a href=/website/tag/live/ style=font-size:.7rem>Live</a>
-<a href=/website/tag/lunch-learn/ style=font-size:.7rem>Lunch & Learn</a>
 <a href=/website/tag/meetup/ style=font-size:1.185048590028128rem>Meetup</a>
-<a href=/website/tag/namesake/ style=font-size:.7rem>Namesake</a>
 <a href=/website/tag/quickie/ style=font-size:1.716614928029403rem>Quickie</a>
 <a href=/website/tag/security/ style=font-size:1.7971117647813875rem>Security</a>
 <a href=/website/tag/sre/ style=font-size:1.9761287674328858rem>SRE</a>
