deploy: 78e642eb0ab03c7d670f0dc59c250d5738350816

--- a/fr/publication/index.html
+++ b/fr/publication/index.html
@@ -9,9 +9,10 @@ Chapitre de livre</option></select></div><div class=col-auto><select class="pub-
 <span class="article-metadata li-cite-author"><span>David Aparicio</span></span>
 (2022).
 <a href=/fr/publication/programmez_hs8/>La Sécurité dès la conception (Secure by design)</a>.
-Dans <em>Programmez! HS8</em>.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=/https:/programmez.com/magazine/article/la-securite-des-la-conception-secure-design target=_blank rel=noopener>PDF</a>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/fr/publication/programmez_hs8/cite.bib>Citation</a>
+Dans <em>Programmez! HS8</em>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/fr/publication/programmez_hs8/cite.bib>Citation</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=/fr/project/namecheck/>Projet</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://programmez.com/magazine/article/la-securite-des-la-conception-secure-design target=_blank rel=noopener><i class="fas fa-book mr-1"></i>PDF</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/davidaparicio/namecheck target=_blank rel=noopener><i class="fas fa-file mr-1"></i>Code</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://twitter.com/francoistonic/status/1568152549043093506 target=_blank rel=noopener><i class="fab fa-twitter mr-1"></i>Twitter</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-3 year-2014"><div class=pub-list-item style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author"><span>David Aparicio</span>, <span>Luiz E. Buzato</span></span>
 (2014).
